fix for dark mode extensions

--- a/src/index.css
+++ b/src/index.css
@@ -35,23 +35,23 @@ body {
     }
 
     .gradient-0 {
-        @apply bg-gradient-to-br from-[#2E3192] to-[#1BFFFF]
+        @apply bg-[#2E3192] bg-gradient-to-br from-[#2E3192] to-[#1BFFFF]
     }
 
     .gradient-1 {
-        @apply bg-gradient-to-br from-[#D4145A] to-[#FBB03B]
+        @apply bg-[#D4145A] bg-gradient-to-br from-[#D4145A] to-[#FBB03B]
     }
 
     .gradient-2 {
-        @apply bg-gradient-to-br from-[#009245] to-[#FCEE21]
+        @apply bg-[#009245] bg-gradient-to-br from-[#009245] to-[#FCEE21]
     }
 
     .gradient-3 {
-        @apply bg-gradient-to-br from-[#662D8C] to-[#ED1E79]
+        @apply bg-[#662D8C] bg-gradient-to-br from-[#662D8C] to-[#ED1E79]
     }
 
     .gradient-4 {
-        @apply bg-gradient-to-br from-[#D8B5FF] to-[#1EAE98]
+        @apply bg-[#D8B5FF] bg-gradient-to-br from-[#D8B5FF] to-[#1EAE98]
     }
 
 
